edit main layout and header styles

--- a/src/shared/styles/variables/_screens.scss
+++ b/src/shared/styles/variables/_screens.scss
@@ -5,6 +5,7 @@ $large: 1200px;
 $xxx-medium: 1000px;
 $xx-medium: 930px;
 $x-medium: 830px;
+$xs-medium: 750px;
 $medium: 700px;
 $small: 570px;
 $smallest: 450px;
