--- a/src/entities/Header/ui/styles.module.scss
+++ b/src/entities/Header/ui/styles.module.scss
@@ -2,6 +2,8 @@
 @use '@/shared/styles/variables' as variables;
 
 .SHeader {
+    position: sticky;
+    top: 0;
     margin-bottom: 50px;
     width: 100%;
     height: 72px;
