--- a/src/entities/MainLayout/ui/styles.module.scss
+++ b/src/entities/MainLayout/ui/styles.module.scss
@@ -2,6 +2,7 @@
 @use '@/shared/styles/variables' as variables;
 
 .SMainLayout {
+    position: relative;
     width: 100%;
     min-height: 100vh;
     max-width: 1440px;
