--- a/src/shared/styles/variables/_screens.scss
+++ b/src/shared/styles/variables/_screens.scss
@@ -1,7 +1,8 @@
 $xxx-large: 3000px;
 $xx-large: 2000px;
-$x-large: 1600px;
+$x-large: 1440px;
 $large: 1200px;
+$xxxx-medium: 1100px;
 $xxx-medium: 1000px;
 $xx-medium: 930px;
 $x-medium: 830px;
