--- a/src/entities/User/ui/styles.module.scss
+++ b/src/entities/User/ui/styles.module.scss
@@ -30,4 +30,9 @@
             @include mixins.font-montserrat-m-medium;
         }
     }
+
+    @media screen and (max-width: variables.$small) {
+        padding: 0 10px;
+        width: 100%;
+    }
 }
