--- a/src/entities/Header/ui/styles.module.scss
+++ b/src/entities/Header/ui/styles.module.scss
@@ -2,6 +2,7 @@
 @use '@/shared/styles/variables' as variables;
 
 .SHeader {
+    z-index: 5;
     position: sticky;
     top: 0;
     margin-bottom: 50px;
