--- a/src/features/Car/ui/styles.module.scss
+++ b/src/features/Car/ui/styles.module.scss
@@ -2,6 +2,7 @@
 @use '@/shared/styles/variables' as variables;
 
 .SCar {
+    position: relative;
     width: 345px;
     display: flex;
     flex-direction: column;
@@ -9,15 +10,27 @@
     justify-content: center;
 
     .SCarImage {
+        cursor: pointer;
+        
         width: 345px;
         height: 244px;
 
         object-fit: cover;
     }
 
+    .SCarData {
+        display: flex;
+    }
+
     .SCarName {
         width: 100%;
         @include mixins.font-montserrat-m-medium;
-        text-align: center;
+    }
+
+    .SEdit {
+        display: grid;
+        justify-self: end;
+        justify-content: space-between;
+        gap: 10px;
     }
 }
