create create / edit form (not finished with image)

--- a/src/shared/styles/variables/_colors.scss
+++ b/src/shared/styles/variables/_colors.scss
@@ -1,6 +1,7 @@
 $WHITE: #fff;
 $LIGHT_GRAY: #D3D3D3;
 $GRAY: #AEAEAE;
+$DARK_GRAY: #7B7B7B;
 $RED: #B01B1B;
 $DARK_RED: #4C0606;
 $LIGHT_BLACK: #00000040;
@@ -10,6 +11,7 @@ $OVERLAY: #0000004D;
 $BGC_MAIN: $WHITE;
 
 $TEXT_MAIN: $BLACK;
+$TEXT_DESCRIPTION: $DARK_GRAY;
 
 $ERROR: $RED;
 
