--- a/src/entities/MainLayout/ui/styles.module.scss
+++ b/src/entities/MainLayout/ui/styles.module.scss
@@ -7,4 +7,8 @@
     min-height: 100vh;
     max-width: 1440px;
     margin: 0 auto;
+
+    @media screen and (max-width: 1439px) {
+        padding: 0 10px;
+    }
 }
