sign in and sign up pages with forms

--- a/src/shared/styles/mixins/_typography.scss
+++ b/src/shared/styles/mixins/_typography.scss
@@ -3,6 +3,7 @@
 $FONT_S: 16px;
 $FONT_XM: 18px;
 $FONT_M: 20px;
+$FONT_XL: 40px;
 
 $MONTSERRAT: 'Montserrat', sans-serif;
 
@@ -32,6 +33,14 @@ $LINE_HEIGHT: 1.5;
     font-weight: 300;
 }
 
+@mixin font-montserrat-xl-light() {
+    font-family: $MONTSERRAT;
+    font-size: $FONT_XL;
+    line-height: $LINE_HEIGHT;
+    font-style: normal;
+    font-weight: 300;
+}
+
 @mixin font-montserrat-s() {
     font-family: $MONTSERRAT;
     font-size: $FONT_S;
@@ -51,6 +60,14 @@ $LINE_HEIGHT: 1.5;
 @mixin font-montserrat-m() {
     font-family: $MONTSERRAT;
     font-size: $FONT_M;
+    line-height: $LINE_HEIGHT;
+    font-style: normal;
+    font-weight: 400;
+}
+
+@mixin font-montserrat-xl() {
+    font-family: $MONTSERRAT;
+    font-size: $FONT_XL;
     line-height: $LINE_HEIGHT;
     font-style: normal;
     font-weight: 400;
@@ -80,6 +97,15 @@ $LINE_HEIGHT: 1.5;
     font-weight: 600;
 }
 
+@mixin font-montserrat-xl-medium() {
+    font-family: $MONTSERRAT;
+    font-size: $FONT_XL;
+    line-height: $LINE_HEIGHT;
+    font-style: normal;
+    font-weight: 600;
+}
+
+
 @mixin font-montserrat-s-bold() {
     font-family: $MONTSERRAT;
     font-size: $FONT_S;
@@ -99,6 +125,14 @@ $LINE_HEIGHT: 1.5;
 @mixin font-montserrat-m-bold() {
     font-family: $MONTSERRAT;
     font-size: $FONT_M;
+    line-height: $LINE_HEIGHT;
+    font-style: normal;
+    font-weight: 700;
+}
+
+@mixin font-montserrat-xl-bold() {
+    font-family: $MONTSERRAT;
+    font-size: $FONT_XL;
     line-height: $LINE_HEIGHT;
     font-style: normal;
     font-weight: 700;
