--- a/src/entities/MainLayout/ui/styles.module.scss
+++ b/src/entities/MainLayout/ui/styles.module.scss
@@ -11,4 +11,8 @@
     @media screen and (max-width: 1439px) {
         padding: 0 10px;
     }
+
+    .SChildren {
+        margin-top: 50px;
+    }
 }
