edit car popup visibility (hide "delete" button when we create a car)

--- a/src/features/CarPopup/ui/styles.module.scss
+++ b/src/features/CarPopup/ui/styles.module.scss
@@ -21,9 +21,13 @@
         }
     }
 
-    .SPFooter {
+    .SPFooter2Actions {
         display: grid;
         grid-template-columns: 1.5fr 1fr;
         column-gap: 15px;
+    }
+
+    .SPFooter1Action {
+        display: grid;
     }
 }
