--- a/src/widgets/Car/ui/styles.module.scss
+++ b/src/widgets/Car/ui/styles.module.scss
@@ -15,6 +15,8 @@
         width: 345px;
         height: 244px;
 
+        border-radius: variables.$RADIUS-M;
+
         object-fit: cover;
     }
 
