--- a/src/pages/cars/ui/styles.module.scss
+++ b/src/pages/cars/ui/styles.module.scss
@@ -6,6 +6,7 @@
     display: grid;
     justify-items: center;
     row-gap: 20px;
+    padding-bottom: 50px;
 
     .SCars {
         width: 100%;
@@ -32,4 +33,10 @@
     .SButton {
         width: max-content;
     }
+}
+
+.SLoader { 
+    width: 100%;
+    display: flex;
+    justify-content: center;
 }
