--- a/src/features/CarPopup/ui/styles.module.scss
+++ b/src/features/CarPopup/ui/styles.module.scss
@@ -23,13 +23,12 @@
         }
     }
 
-    .SPFooter2Actions {
+    .SPFooter {
         display: grid;
-        grid-template-columns: 1.5fr 1fr;
-        column-gap: 15px;
-    }
 
-    .SPFooter1Action {
-        display: grid;
+        &_action {
+            grid-template-columns: 1.5fr 1fr;
+            column-gap: 15px;
+        }
     }
 }
