create field components to reuse them and startes to change overlay loader to buttons loader and locals

--- a/src/pages/users/ui/styles.module.scss
+++ b/src/pages/users/ui/styles.module.scss
@@ -1,6 +1,11 @@
 @use '@/shared/styles/mixins' as mixins;
 @use '@/shared/styles/variables' as variables;
 
+.SSPinner {
+    width: max-content;
+    margin: 0 auto;
+}
+
 .SUsersWrapper {
     width: 100%;
 
