--- a/src/pages/cars/ui/styles.module.scss
+++ b/src/pages/cars/ui/styles.module.scss
@@ -1,6 +1,11 @@
 @use '@/shared/styles/mixins' as mixins;
 @use '@/shared/styles/variables' as variables;
 
+.SSPinner {
+    width: max-content;
+    margin: 0 auto;
+}
+
 .SCarsWrapper {
     margin: 0 auto;
     display: grid;
